# cookiecutters

./: README.md
cookiecutter/: README.md  cookiecutter.json
cookiecutter/hooks/: post_gen_project.py
cookiecutter/{{ cookiecutter.project_name }}/: README.md  cookiecutter.json
cookiecutter/{{ cookiecutter.project_name }}/hooks/: post_gen_project.py  pre_prompt.py
cpp/: README.md  cookiecutter.json
cpp/hooks/: post_gen_project.py  pre_gen_project.py  pre_prompt.py
cpp/{{ cookiecutter.project_name }}/: README.md  meson.build  pyproject.toml  {% if cookiecutter.include_cli %}cli.cpp{% endif %}  {% if cookiecutter.include_doxygen %}source_doxygen_runner.py{% endif %}  {% if cookiecutter.include_source_checker %}source_checker.py{% endif %}
cpp/{{ cookiecutter.project_name }}/.github/workflows/: setup-linux.yml  setup-macos.yml  setup-windows.yml  {% if cookiecutter.include_cli %}build-cli.yml{% endif %}  {% if cookiecutter.include_gtest != 'false' %}run-tests.yml{% endif %}  {% if cookiecutter.include_gtest %}run-tests.yml{% endif %}  {% if cookiecutter.include_python_extension != 'false' %}build-wheels.yml{% endif %}
cpp/{{ cookiecutter.project_name }}/.github/workflows/setup-linux-gcc/: action.yml
cpp/{{ cookiecutter.project_name }}/.github/workflows/setup-macos-gcc/: action.yml
cpp/{{ cookiecutter.project_name }}/.github/workflows/setup-windows-msvc/: action.yml
cpp/{{ cookiecutter.project_name }}/.github/workflows/setup-windows-msys2-gcc-ucrt/: action.yml
cpp/{{ cookiecutter.project_name }}/cpp/: meson.build  {% if cookiecutter.include_cli %}cli.cpp{% endif %}
cpp/{{ cookiecutter.project_name }}/cpp/{{ cookiecutter.project_name }}/math/: helpers.h  helpers_test.cpp
cpp/{{ cookiecutter.project_name }}/cpp/{{ cookiecutter.project_name }}/{% if cookiecutter.include_cli %}cli{% endif %}/: cli.h
cpp/{{ cookiecutter.project_name }}/cpp/{{ cookiecutter.project_name }}/{% if cookiecutter.include_python_extension != 'false' %}python{% endif %}/: python_extension.h
cpp/{{ cookiecutter.project_name }}/{% if cookiecutter.include_python_extension != 'false' %}python{% endif %}/: build.py  pyproject.toml
cpp/{{ cookiecutter.project_name }}/{% if cookiecutter.include_python_extension != 'false' %}python{% endif %}/{{ cookiecutter.project_name }}/_native/: .gitignore
cpp/{{ cookiecutter.project_name }}/{% if cookiecutter.include_python_extension != 'false' %}python{% endif %}/{{ cookiecutter.project_name }}/math/: helpers.py  helpers.pyi
cpp/{{ cookiecutter.project_name }}/{{ cookiecutter.project_name }}/math/: helpers.h  {% if cookiecutter.include_python_extension != 'false' %}helpers.py{% endif %}  {% if cookiecutter.include_python_extension != 'false' %}helpers_python_extension.cpp{% endif %}  {% if cookiecutter.include_python_extension != 'false' %}helpers_python_extension.h{% endif %}
cpp/{{ cookiecutter.project_name }}/{{ cookiecutter.project_name }}/{% if cookiecutter.include_cli %}cli{% endif %}/: cli.cpp  cli.h
cpp_template/: cookiecutter.json
cpp_template/hooks/: post_gen_project.sh  pre_gen_project.sh
cpp_template/{{cookiecutter.project_name}}/: CMakeLists.txt  conanfile.txt  configure.sh
cpp_template/{{cookiecutter.project_name}}/src/main/: main.cpp  main.hpp
cpp_template/{{cookiecutter.project_name}}/src/test/: test.cpp  test.hpp
custom-github-action/: README.md  cookiecutter.json
custom-github-action/hooks/: pre_gen_project.py
custom-github-action/{{ cookiecutter.project_name }}/: {% if cookiecutter.type == 'composite' %}action.yml{% endif %}  {% if cookiecutter.type == 'docker' %}Dockerfile{% endif %}  {% if cookiecutter.type == 'docker' %}action.yml{% endif %}  {% if cookiecutter.type == 'docker' %}entrypoint.sh{% endif %}  {% if cookiecutter.type == 'javascript' %}action.yml{% endif %}  {% if cookiecutter.type == 'javascript' %}index.js{% endif %}
custom-github-action/{{ cookiecutter.project_name }}/.github/workflows/: test.yml
