[project]
name = "{{ cookiecutter.project_name }}"
version = "0.0.1"
description = "{{ cookiecutter.project_name }}"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
{% if cookiecutter.include_python_extension != 'false' -%}
    "numpy (>=2.3.3,<3.0.0)",
{%- endif %}
]

[build-system]
requires = [
    "meson-python",
    "meson>=1.4",
{% if cookiecutter.include_python_extension != 'false' -%}
    "numpy (>=2.3.3,<3.0.0)",
{%- endif %}
]
build-backend = "mesonpy"
