[project]
name = "{{ cookiecutter.project_name }}"
version = "0.0.1"
description = "{{ cookiecutter.project_name }}"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
{% if 'numpy' in cookiecutter.include_python_extension -%}
    "numpy (>=2.0.0,<3.0.0)",
{%- endif %}
]

[build-system]
requires = [
    "meson-python",
    "meson>=1.4",
{% if 'numpy' in cookiecutter.include_python_extension -%}
    "numpy (>=2.0.0,<3.0.0)",
{%- endif %}
]
build-backend = "mesonpy"
